@@ -299,9 +299,8 @@ public final class Lucene99ScalarQuantizedVectorsWriter extends FlatVectorsWrite
   @Override
   public long ramBytesUsed() {
     long total = SHALLOW_RAM_BYTES_USED;
-    for (FieldWriter field : fields) {
-      total += field.ramBytesUsed();
-    }
+    // The vector delegate will also account for this writer's KnnFieldVectorsWriter objects
+    total += rawVectorDelegate.ramBytesUsed();
     return total;
   }
 
